--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,47 +1,47 @@
 %body
-  %div.flash-box
-  %div.wrapper
-    %div.chat-side
-      %div.side-header
-        %div.side-header__box
+  .flash-box
+  .wrapper
+    .chat-side
+      .side-header
+        .side-header__box
           %p.side-header__box__user-name
             nabec
           %ul.side-header__box__menu
             %li.side-header__box__menu__new-group
-              =link_to "/groups/new", class: "side-header-btn side-header-btn--edit" do
+              =link_to "#", class: "side-header-btn side-header-btn--edit" do
                 =fa_icon "edit", class: "side-header-btn--icon"
             %li.side-header__box__menu__edit-user
-              =link_to "/users/:id/edit", class: "side-header-btn side-header-btn--cog" do
+              =link_to "#", class: "side-header-btn side-header-btn--cog" do
                 =fa_icon "cog", class: "side-header-btn--cog"
-      %div.groups
-        %a{ :href => '/groups/:id/messages'}
-          %div.group
+      .groups
+        =link_to "#", class: "group" do
+          .group
             %p.group__group-name
               tttest
             %p.group__latest-message
               test
-    %div.chat-main
-      %div.main-header
-        %div.main-header__left-box
+    .chat-main
+      .main-header
+        .main-header__left-box
           %h2.main-header__left-box__current-group
             tttest
           %ul.main-header__left-box__member-list
             Member
             %li.main-header__left-box__member-list__member
-        %a{ :href => '/groups/:id/edit'}
-          %div.main-header__edit-btn Edit
-      %div.messages
-        %div.message
-          %div.message__upper-info
+        =link_to "#", class: "main-header" do
+          .main-header__edit-btn Edit
+      .messages
+        .message
+          .message__upper-info
             %p.message__upper-info__talker
               nabec
             %p.message__upper-info__date
               2019/07/12
           %p.message__text
             test
-      %div.form
+      .form
         %form.new_message#nex_message
-          %div.input-box
+          .input-box
             %input{ :class => "input-box__text", :placeholder => "type a message" }
             %label.input-box__image
               %i.fa.fa-image
