--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,14 +5,14 @@
       .side-header
         .side-header__box
           %p.side-header__box__user-name
-            nabec
+            = current_user.name
           %ul.side-header__box__menu
             %li.side-header__box__menu__new-group
               =link_to "#", class: "side-header-btn side-header-btn--edit" do
                 =fa_icon "edit", class: "side-header-btn--icon"
             %li.side-header__box__menu__edit-user
-              =link_to "#", class: "side-header-btn side-header-btn--cog" do
-                =fa_icon "cog", class: "side-header-btn--cog"
+              =link_to edit_user_path(current_user) do
+                =fa_icon "cog", class: "icon"
       .groups
         =link_to "#", class: "group" do
           .group
