--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -8,18 +8,19 @@
             = current_user.name
           %ul.side-header__box__menu
             %li.side-header__box__menu__new-group
-              =link_to "#", class: "side-header-btn side-header-btn--edit" do
-                =fa_icon "edit", class: "side-header-btn--icon"
+              =link_to new_group_path do
+                =fa_icon "edit", class: "icon"
             %li.side-header__box__menu__edit-user
               =link_to edit_user_path(current_user) do
                 =fa_icon "cog", class: "icon"
       .groups
-        =link_to "#", class: "group" do
+        - current_user.groups.each do |group|
           .group
-            %p.group__group-name
-              tttest
-            %p.group__latest-message
-              test
+            = link_to group_messages_path(group) do
+              %p.group__group-name
+                = group.name
+              %p.group__latest-message
+                test
     .chat-main
       .main-header
         .main-header__left-box
