--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -20,31 +20,26 @@
               %p.group__group-name
                 = group.name
               %p.group__latest-message
-                test
+                = group.show_last_message
     .chat-main
       .main-header
         .main-header__left-box
           %h2.main-header__left-box__current-group
-            tttest
+            = @group.name
           %ul.main-header__left-box__member-list
-            Member
+            Member：
             %li.main-header__left-box__member-list__member
+              ???
         =link_to "#", class: "main-header" do
           .main-header__edit-btn Edit
       .messages
-        .message
-          .message__upper-info
-            %p.message__upper-info__talker
-              nabec
-            %p.message__upper-info__date
-              2019/07/12
-          %p.message__text
-            test
+        = render @messages
       .form
-        %form.new_message#nex_message
+        = form_for [@group, @message] do |f|
           .input-box
-            %input{ :class => "input-box__text", :placeholder => "type a message" }
-            %label.input-box__image
-              %i.fa.fa-image
-              %input.input-box__image__file{ :type => "file"}
-          %input{ :type => "submit", :class => "submit-btn", :value => "Send" }
+            = f.text_field :text, class: 'input-box__text', placeholder: 'type a message'
+            .input-box__image
+            = f.label :image, class: 'input-box__image' do
+              = fa_icon 'image', class: 'icon'
+              = f.file_field :image, class: 'input-box__image__file'
+          = f.submit 'Send', class: 'submit-btn'
