--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -29,8 +29,9 @@
           %ul.main-header__left-box__member-list
             Member：
             %li.main-header__left-box__member-list__member
-              ???
-        =link_to "#", class: "main-header" do
+              - @group.users.each do |user|
+                = user.name
+        =link_to edit_group_path(@group) do
           .main-header__edit-btn Edit
       .messages
         = render @messages
