--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 @import "./reset";
 @import "./variable";
-@import "./group";
+@import "modules/group";
 @import "./messages";
 @import "modules/user";
 @import "modules/side_bar";
