--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.message
+.message{data: {message_id: message.id, group_id: message.group_id}}
   .message__upper-info
     %p.message__upper-info__talker
       = message.user.name
